# ai-cademics

./: .env.example  .gitattributes  .gitignore  Caddyfile  Makefile  README.md  build_report.py  docker-compose.prod.yml  docker-compose.yml  launcher.py  start.bat
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  deploy.yml
agents/: student_agent_Qwen.py
backend/: .dockerignore  Dockerfile  Main.py  achievements.py  agent_client.py  database.py  journals.py  live_state.py  main_v3_websocket.py  pyproject.toml  requirements.txt  streaming.py  student_agent.py  student_agent_llama.py
backend/app/: __init__.py  config.py  database.py  deps.py  main.py  models.py  pdf_report.py  schemas.py  security.py  seed.py
backend/app/engine/: __init__.py  agents.py  evals.py  prompts.py  providers.py  queue.py  text_utils.py
backend/app/routers/: agent.py  auth.py  chat.py  classrooms.py  history.py  ratings.py
backend/legacy/: Main.py  student_agent_Qwen.py  student_agent_llama.py
backend/tests/: conftest.py  test_auth.py  test_chat_history.py  test_classrooms.py  test_evals.py  test_features.py  test_simulation.py  test_v22_features.py  test_v23_features.py
docs/: AI_USAGE_REPORT.md  BACKLOG.md  BUG_REPORTS.md  DEMO.md  DEPLOY.md  DIAGRAMS.md  GIT_WORKFLOW.md  TESTING.md
evals/: config.py  eval_emotions.py  eval_grading.py  eval_journals.py  run_evals.py
frontend/: .env.example  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
(+27 files in other folders)
